# eltropy-npm-package-test

./: .npmrc  ARCHITECTURE.md  AUTO_UPDATE_SETUP.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  ICON_SETUP.md  Info.plist  Makefile  README.md  README1.md  RUN.sh  SETUP.md  SIPConnectivityTester.pro  TESTING.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_TLS_SETUP.md  app.rc  build.bat  eltroy-voip-connectivity-app  index.html  moc_connectivitymanager.cpp  moc_connectivitytestblock.cpp  moc_iconnectivitychecker.cpp  moc_mainwindow.cpp  moc_multipingchecker.cpp  moc_nattypechecker.cpp  moc_networkinfomanager.cpp  moc_rtpconnectivitychecker.cpp  moc_sipalgchecker.cpp  moc_sipcallmanager.cpp  moc_sipregistrationblock.cpp  moc_sipregistrationmanager.cpp  moc_tcpconnectivitychecker.cpp  moc_tlsconnectivitychecker.cpp  moc_udpconnectivitychecker.cpp  moc_voipqualitychecker.cpp  moc_wssconnectivitychecker.cpp  package-lock.json  package.json  (+6 more)
.github/workflows/: ci-cd-prod.yaml  ci-cd.yml  convert-icon.yml  merge-develop-into-master-backend.yaml  merge-develop-into-master.yaml  on-pr-create.yaml  prod-develop-ci-cd.yaml  prod-master-ci-cd.yaml  windows-build.yml
.storybook/: main.js  preview.js
SIPConnectivityTester.app.bkp1/Contents/Frameworks/: libb2.1.dylib  libdbus-1.3.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libicui18n.78.dylib  libjpeg.8.dylib  liblzma.5.dylib  libmng.2.dylib  libpng16.16.dylib  libsharpyuv.0.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libzstd.1.dylib
SIPConnectivityTester.app.bkp1/Contents/Frameworks/QtDBus.framework/: QtDBus
SIPConnectivityTester.app.bkp1/Contents/Frameworks/QtQmlModels.framework/: QtQmlModels
SIPConnectivityTester.app.bkp1/Contents/Frameworks/QtQmlWorkerScript.framework/: QtQmlWorkerScript
SIPConnectivityTester.app.bkp1/Contents/MacOS/: SIPConnectivityTester
SIPConnectivityTester.app.yooo/Contents/: Info.plist
SIPConnectivityTester.app.yooo/Contents/MacOS/: SIPConnectivityTester
SIPConnectivityTester.app/Contents/: Info.plist
SIPConnectivityTester.app/Contents/Frameworks/: libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libdouble-conversion.3.dylib  libgio-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libicuuc.78.dylib  libintl.8.dylib  libjasper.7.dylib  liblcms2.2.dylib  libmd4c.0.dylib  libpcre2-16.0.dylib  libpcre2-8.0.dylib  libssl.3.dylib  libwebpmux.3.dylib
SIPConnectivityTester.app/Contents/MacOS/: SIPConnectivityTester
SIPConnectivityTester.app/Contents/PlugIns/imageformats/: libqicns.dylib  (+8 more)
src/: App.tsx  index.css  index.js  index.ts  main.cpp  main.tsx  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_advancedtab.cpp  mainwindow_calltab.cpp  mainwindow_siplog.cpp  mainwindow_voipqualitytab.cpp  rtpengine.conf
src/assets/icons/: bin.tsx  calendar.tsx  chat.tsx  checkmark-circle.tsx  checkmark-filled.tsx  chevron-down.tsx  chevron-left.tsx  chevron-right.tsx  close.tsx  dashboard.tsx  edit.tsx  error-circle.tsx  error-exclamation.tsx  folder-file.tsx  folder-upload.tsx  index.ts  kebab-vertical.tsx  reload.tsx  search.tsx  settings.tsx  sort.tsx  user.tsx
src/components/: index.ts
src/components/Badge/: Badge.css  Badge.js  Badge.stories.js
src/components/BottomSheet/: BottomSheet.test.tsx  BottomSheet.tsx
src/components/Button/: Button.css  Button.js  Button.stories.js  Button.stories.tsx  Button.test.tsx  Button.tsx
src/components/Card/: Card.css  Card.js  Card.stories.js
src/components/Checkbox/: Checkbox.stories.tsx  Checkbox.test.tsx  Checkbox.tsx
src/components/DateInput/: DateInput.stories.tsx  DateInput.test.tsx  DateInput.tsx  index.ts
src/components/Dropdown/: Dropdown.stories.tsx  Dropdown.test.tsx  Dropdown.tsx  types.ts
src/components/FileUpload/: FileUpload.stories.tsx  FileUpload.test.tsx  FileUpload.tsx  index.ts
src/components/Input/: index.ts
src/components/Pagination/: Pagination.stories.tsx  Pagination.test.tsx  Pagination.tsx
src/components/Review/: Review.tsx  index.ts  review.stories.tsx  review.test.tsx
src/components/Table/: Table.stories.tsx  Table.test.tsx  Table.tsx  index.ts
src/components/Tabs/: Tabs.stories.tsx  Tabs.test.tsx  Tabs.tsx
src/components/Tag/: Tag.stories.tsx  Tag.test.tsx  Tag.tsx
src/components/Tooltip/: Tooltip.stories.tsx  Tooltip.test.tsx  Tooltip.tsx
src/components/typography/: text.tsx  typography.tsx
src/connectivity/: connectivitymanager.cpp  connectivitymanager.h  iconnectivitychecker.h  multipingchecker.cpp  multipingchecker.h  nattypechecker.cpp  nattypechecker.h  rtpconnectivitychecker.cpp  rtpconnectivitychecker.h  sipalgchecker.cpp  sipalgchecker.h  tcpconnectivitychecker.cpp  tcpconnectivitychecker.h  tlsconnectivitychecker.cpp  tlsconnectivitychecker.h  udpconnectivitychecker.cpp  udpconnectivitychecker.h  voipqualitychecker.cpp  voipqualitychecker.h  wssconnectivitychecker.cpp  wssconnectivitychecker.h
src/hooks/: useDevice.ts
src/models/: connectivityresult.cpp  connectivityresult.h  environmentconfig.cpp  environmentconfig.h  serverconfig.cpp  serverconfig.h
src/network/: networkinfomanager.cpp  networkinfomanager.h
src/sip/: sipcallmanager.cpp  sipcallmanager.h  sipregistrationmanager.cpp  sipregistrationmanager.h
src/stories/: Colors.stories.tsx  Icons.stories.tsx  Spacing.stories.tsx  Typography.stories.tsx
src/test/: test-utils.tsx  vitest.d.ts
src/theme/: index.ts  theme.ts
src/theme/recipes/: button.recipe.ts  checkbox.recipe.ts  dropdown.recipe.ts  file-upload.recipe.ts  index.ts  pagination.recipe.ts  phone-input-dropdown.recipe.ts  phone-input.recipe.ts  pin-input.recipe.ts  review.recipe.ts  search-input.recipe.ts  table.recipe.ts  tabs.recipe.ts  tag.recipe.ts  text-input.recipe.ts  tooltip.recipe.ts
src/theme/tokens/: colors.ts  spacing.ts  typography.ts
src/updater/: autoupdater.cpp  autoupdater.h  updatedialog.cpp  updatedialog.h
src/utils/: countries.ts
src/widgets/: connectivitytestblock.cpp  connectivitytestblock.h  sipregistrationblock.cpp  sipregistrationblock.h
(+80 files in other folders)
